--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -36,6 +36,8 @@
             android:layout_marginTop="40dp"
             android:drawableLeft="@drawable/ic_person"
             android:drawablePadding="5dp"
+            android:inputType="textPersonName"
+            android:autofillHints="@string/app_name"
             android:hint="Enter username" />
 
         <EditText
@@ -45,7 +47,9 @@
             android:layout_marginTop="5dp"
             android:drawableLeft="@drawable/ic_lock"
             android:drawablePadding="5dp"
-            android:hint="Enter password" />
+            android:inputType="textPassword"
+            android:autofillHints="@string/app_name"
+            android:hint="@string/app_name" />
 
 
 
@@ -55,7 +59,7 @@
             android:layout_gravity="right"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="5dp"
-            android:text="Forgot Password?" />
+            android:text="@string/app_name" />
 
         <Button
             android:layout_width="200dp"
@@ -65,7 +69,7 @@
             android:layout_marginRight="50dp"
             android:layout_marginTop="5dp"
             android:background="@android:color/holo_orange_dark"
-            android:text="Sign in"
+            android:text="@string/app_name"
             android:textAllCaps="false"
             android:textColor="@android:color/white"
             android:textSize="18sp" />
@@ -73,10 +77,10 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="right"
+            android:layout_gravity="end"
             android:layout_marginBottom="5dp"
             android:layout_marginTop="5dp"
-            android:text="Mosab Ghorab" />
+            android:text="@string/app_name" />
 
 
     </LinearLayout>
@@ -85,6 +89,7 @@
         android:id="@+id/imageView"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:contentDescription="@string/app_name"
         android:layout_marginBottom="256dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
@@ -101,7 +106,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
-        android:text="Mosab Ghorab"
+        android:text="@string/app_name"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/imageView"
@@ -110,4 +115,4 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
